# cpp-example-travis-conan

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt
src/: main
